# rusty-calculator

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
src/: app.rs  keyboard_event_helper.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/calculator/: calculate.rs
